--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       </div>
 
       <div class="card-design mx-2">
-        <img src="images/g-motherboard-1.jpg" class="img-fluid all-p-img" alt="">
+        <img src="images/processor-1.jpg" class="img-fluid all-p-img" alt="">
         <div class="card-text">
           <h3 class="mt-4 px-4">Processor</h3>
           <p class="mt-2 px-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, iusto?</p>
@@ -276,7 +276,7 @@
       </div>
 
       <div class="card-design mx-2">
-        <img src="images/g-laptop.jpg" class="img-fluid all-p-img" alt="">
+        <img src="images/graphic-card.jpeg" class="img-fluid all-p-img" alt="">
         <div class="card-text">
           <h3 class="mt-4 px-4">Graphic Card</h3>
           <p class="mt-2 px-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, iusto?</p>
@@ -285,7 +285,7 @@
       </div>
 
       <div class="card-design mx-2">
-        <img src="images/g-keyboard.png" class="img-fluid all-p-img" alt="">
+        <img src="images/g-router.jpg" class="img-fluid all-p-img" alt="">
         <div class="card-text">
           <h3 class="mt-4 px-4">Gaming Rowter</h3>
           <p class="mt-2 px-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, iusto?</p>
@@ -294,7 +294,7 @@
       </div>
 
       <div class="card-design mx-2">
-        <img src="images/g-headphone.jpg" class="img-fluid all-p-img" alt="">
+        <img src="images/ptinter.webp" class="img-fluid all-p-img" alt="">
         <div class="card-text">
           <h3 class="mt-4 px-4">Printer</h3>
           <p class="mt-2 px-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, iusto?</p>
