--- a/index.html
+++ b/index.html
@@ -20,8 +20,124 @@
 
 <body>
 
-  <!-- navbar -->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <!-- navbar starts -->
+  <nav class="navbar">
+    <!-- <div class="header-part"> -->
+
+    <div class="nav-logo">
+      <img src="images/tc-logo.png" alt="tc-logo" class="img-fluid">
+    </div>
+
+    <form action="">
+      <div class="search-bar">
+        <input type="search" name="s" id="search" class="s-input s-design" placeholder="Enter your items name . . . .">
+        <button class="btn" type="submit"><i class="bi bi-search"></i></button>
+      </div>
+    </form>
+
+    <div class="header-icon">
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-twitter"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="s-margin"><i class="bi bi-linkedin"></i></a>
+    </div>
+
+    <div class="navbar navbar-expand-lg s-navbar">
+      <!-- <div class="container"> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item pe-4 e-space">
+            <a class="nav-link" href="#">Desktop</a>
+          </li>
+
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Laptop</a>
+          </li>
+          <!-- 
+          <div class="sub-menu-1">
+            <ul>
+              <li><a class="all-menu" href="#">All Laptop</a>
+                <div class="sub-menu-2">
+                  <ul>
+                    <li><a href="#">HP<i class="bi bi-caret-right-fill"></i></a></li>
+                    <li><a href="#">Dell</a></li>
+                    <li><a href="#">Asus</a></li>
+                    <li><a href="#">Acer</a></li>
+                    <li><a href="#">MSI</a></li>
+                    <li><a href="#">Lenevo</a></li>
+                    <li><a href="#">Gigabyte</a></li>
+                    <li><a href="#">Samsung</a></li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+          </li> -->
+
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">PC Component</a>
+            <!-- <div class="sub-menu-1"> -->
+            <!-- <ul>
+                <li><a href="#">Processor</a></li>
+                <li><a href="#">Motherboard</a></li>
+                <li><a href="#">Graphic Card</a></li>
+                <li><a href="#">RAM(Desktop)</a></li>
+                <li><a href="#">RAM(Laptop)</a></li>
+                <li><a href="#">CPU Cooler</a></li>
+                <li><a href="#">Power Supply</a></li>
+                <li><a href="#">SSD</a></li>
+                <li><a href="#">Portable SSD</a></li>
+                <li><a href="#">Hard Disk Driver</a></li>
+                <li><a href="#">Casing</a></li>
+                <li><a href="#">Casing Cooler</a></li>
+                <li><a href="#">Portable Hard Disk Drive</a></li>
+              </ul>
+            </div>
+          </li> -->
+
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Printer</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Monitor</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">UPS</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Office Equipment</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Security Camera</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Networking</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Gaming</a>
+          </li>
+          <li class="nav-item pe-4">
+            <a class="nav-link" href="#">Accessories</a>
+          </li>
+
+        </ul>
+
+        <!-- </div> -->
+      </div>
+    </div>
+
+    <!-- </div> -->
+  </nav>
+  <!-- navbar ends -->
+
+
+  <!-- navbar starts -->
+  <!-- <nav class="navbar navbar-expand-lg bg-light">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,9 +150,9 @@
             <a class="nav-link" href="#">Desktop</a>
           </li>
 
-          <!-- <li class="nav-item pe-4">
+          <li class="nav-item pe-4">
                 <a class="nav-link" href="#">Laptop</a>
-              </li> -->
+              </li>
 
           <li class="nav-item pe-4">
             <a class="nav-link" href="#">Laptop</a>
@@ -44,7 +160,7 @@
             <div class="sub-menu-1">
               <ul>
                 <li><a class="all-menu" href="#">All Laptop</a>
-                  <!-- <div class="sub-menu-2">
+                  <div class="sub-menu-2">
                                 <ul>
                                     <li><a href="#">HP<i class="bi bi-caret-right-fill"></i></a></li>
                                     <li><a href="#">Dell</a></li>
@@ -55,7 +171,7 @@
                                     <li><a href="#">Gigabyte</a></li>
                                     <li><a href="#">Samsung</a></li>
                                 </ul>
-                            </div> -->
+                            </div>
                 </li>
               </ul>
             </div>
@@ -83,9 +199,9 @@
           </li>
 
 
-          <!-- <li class="nav-item pe-4">
+          <li class="nav-item pe-4">
                 <a class="nav-link" href="#">PC Component</a>
-              </li> -->
+              </li>
 
 
 
@@ -118,8 +234,9 @@
 
       </div>
     </div>
-  </nav>
+  </nav> -->
   <!-- navbar ends -->
+
 
   <!-- Featured Category section starts -->
   <div class="f-heading">
@@ -308,7 +425,52 @@
 
   <!-- footer section starts -->
   <footer>
-    
+    <div class="f-content">
+      <div class="mt-5">
+        <img src="images/tc-logo.png" width="120px" alt="">
+        <div class="f-link m-icon">
+          <a href="#"><i class="bi bi-facebook m"></i></a>
+          <a href="#"><i class="bi bi-twitter"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
+
+      <div class="f-link im-link mt-5">
+        <a href="#">About us</a>
+        <a href="#">Branches & Pickup Points</a>
+        <a href="#">Warranty</a>
+        <a href="#">EMI</a>
+        <a href="#">Cookie Policy</a>
+        <a href="#">Brands</a>
+      </div>
+
+      <div class="f-link im-link mt-5">
+        <a href="#">Order Procedure</a>
+        <a href="#">Return & Refund Policy</a>
+        <a href="#">Payment Method</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">Product Book</a>
+      </div>
+
+      <div class="f-link f-contact mt-5">
+        <h3>Contact Us</h3>
+        <p><span class="H-office">Head Office:</span> Mymansingh Road-1702</p>
+        <a href="#"><i class="bi bi-telephone-fill"></i> +01946-128366,+01946-128366</a>
+        <p class="mt-3 s-app"><i class="bi bi-whatsapp text-info "></i><a href="#"> +01727-129297 (Message only)</a></p>
+      </div>
+    </div>
+
+    <div>
+      <div class="s-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227.82376797251135!2d90.38309313913388!3d23.989409902882425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755db7ac8155665%3A0x54012988b62c7a3c!2s4th%20Floor%2C%20Rahman%20Shopping%20Mall%2C%201702%20Joydebpur%20Rd%2C%20Gazipur%201702!5e0!3m2!1sen!2sbd!4v1670075144984!5m2!1sen!2sbd"
+          height="600" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <small class="copy-text">Techno City © 2022 All Rights Reserved. Designed by Techno City Ltd.</small>
+    </div>
   </footer>
   <!-- footer section starts -->
 
