--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
   <footer>
     <div class="f-content">
       <div class="mt-5">
-        <img src="images/tc-logo.png" width="120px" alt="">
+        <img src="images/tc-logo.png" width="120px" class="m-img" alt="">
         <div class="f-link m-icon">
-          <a href="#"><i class="bi bi-facebook m"></i></a>
+          <a href="#"><i class="bi bi-facebook"></i></a>
           <a href="#"><i class="bi bi-twitter"></i></a>
           <a href="#"><i class="bi bi-instagram"></i></a>
           <a href="#"><i class="bi bi-linkedin"></i></a>
@@ -459,10 +459,17 @@
         <p><span class="H-office">Head Office:</span> Mymansingh Road-1702</p>
         <a href="#"><i class="bi bi-telephone-fill"></i> +01946-128366,+01946-128366</a>
         <p class="mt-3 s-app"><i class="bi bi-whatsapp text-info "></i><a href="#"> +01727-129297 (Message only)</a></p>
+
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1822.5816459351067!2d90.37921205163002!3d23.99001020550084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755daf85e5e4527%3A0xb54dc392de522717!2sChandona%20High%20School%20%26%20College!5e0!3m2!1sen!2sbd!4v1670338371289!5m2!1sen!2sbd"
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
 
-    <div>
+    <small class="copy-text">Techno City © 2022 All Rights Reserved. Designed by Techno City Ltd.</small>
+
+
+    <!-- <div>
       <div class="s-map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227.82376797251135!2d90.38309313913388!3d23.989409902882425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755db7ac8155665%3A0x54012988b62c7a3c!2s4th%20Floor%2C%20Rahman%20Shopping%20Mall%2C%201702%20Joydebpur%20Rd%2C%20Gazipur%201702!5e0!3m2!1sen!2sbd!4v1670075144984!5m2!1sen!2sbd"
@@ -470,7 +477,7 @@
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <small class="copy-text">Techno City © 2022 All Rights Reserved. Designed by Techno City Ltd.</small>
-    </div>
+    </div> -->
   </footer>
   <!-- footer section starts -->
 
